# data-product-portal

./: .dockerignore  .env.demo.docker  .env.docker  .gitattributes  .gitignore  .goreleaser.yaml  .isort.cfg  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PLUGIN_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  Taskfile.yml  add_helm_version.sh  compose.yaml  example.env  mypy.ini  package-lock.json  package.json  setup.cfg
agentic-system/: Dockerfile  pyproject.toml
agentic-system/agentic_system/: local_startup.py  main.py  router.py  service.py  settings.py
backend/: .dockerignore  .gitignore  .test.env  Dockerfile  MCP.md  README.md  ai-sample-data.sql  alembic.ini  data_output_registry.yaml  openapi.json  package-lock.json  pyproject.toml  pytest.ini  requirements-poetry.in  requirements-poetry.txt  sample_data.sql  sample_data2.sql  test-compose.yaml
backend/app/: __init__.py  db_tool.py  dependencies.py  embed.py  exceptions.py  local_startup.py  main.py  mainn.py  mcp.py  mcp_utils.py  open_api_export.py  openapi_export.py  remote_proxy.py  seed.py  settings.py  webhook_doc_export.py
backend/app/abstract_data_product/: background_tasks.py  graph_utils.py  model.py  schema_request.py  schema_response.py  service.py  type.py
backend/app/access_durations/: enums.py  model.py  router.py  schema_request.py  schema_response.py  service.py
backend/app/audit/: model.py  router.py  schema.py  schema_create.py  service.py
backend/app/authorization/: router.py  schema.py  service.py
backend/app/authz/: actions.py  authorization.py  parameters.py  rbac_model.conf
backend/app/business_areas/: model.py  router.py  schema.py  schema_create.py  schema_get.py  service.py
backend/app/chat/: router.py
backend/app/configuration/: README.md
backend/app/core/: context.py
backend/app/data_contracts/: model.py  router.py  schema.py  service.py
backend/app/data_output_configuration/: __init__.py  base_model.py  base_schema.py  data_output_types.py  registry.py  router.py  schema_request.py  schema_response.py  schema_union.py  service.py
backend/app/data_outputs/: base_model.py  data_output_types.py  email.py  model.py  router.py  schema.py  schema_base.py  schema_base_get.py  schema_basic.py  schema_get.py  schema_request.py  schema_response.py  schema_union.py  service.py  status.py
backend/app/data_outputs_datasets/: enums.py  model.py  router.py  schema.py  schema_base_get.py  schema_basic.py  schema_get.py  schema_response.py  service.py
backend/app/data_product_lifecycles/: model.py  router.py  schema.py  schema_basic.py  schema_request.py  schema_response.py  service.py
backend/app/data_product_memberships/: enums.py  model.py  router.py  schema.py  schema_basic.py  schema_get.py  schema_request.py  schema_response.py  service.py
backend/app/data_product_settings/: enums.py  model.py  router.py  schema.py  schema_basic.py  schema_get.py  schema_request.py  schema_response.py  service.py
backend/app/data_product_types/: enums.py  model.py  router.py  schema.py  schema_basic.py  schema_create.py  schema_get.py  schema_request.py  schema_response.py  service.py
backend/app/data_products/: email.py  model.py  router.py  schema.py  schema_base.py  schema_base_get.py  schema_basic.py  schema_create.py  schema_get.py  schema_request.py  schema_response.py  service.py  status.py
backend/app/data_products_datasets/: enums.py  model.py  router.py  schema.py  schema_basic.py  schema_create.py  schema_get.py  schema_request.py  schema_response.py  service.py
backend/app/database/: database.py  event_mixin.py
backend/app/datasets/: enums.py  model.py  router.py  schema.py  schema_basic.py  schema_create.py  schema_get.py  schema_request.py  schema_response.py  search_dataset.py  service.py  status.py
backend/app/domains/: model.py  router.py  schema.py  schema_basic.py  schema_create.py  schema_get.py  schema_response.py  service.py
backend/app/environment_platform_configurations/: model.py  schema.py  service.py
backend/app/environment_platform_service_configurations/: glue_schema.py  model.py  s3_schema.py  schema.py  service.py
backend/app/environments/: enums.py  model.py  router.py  schema.py  service.py
backend/app/ephemeral_access/: background_tasks.py  router.py  schema_request.py  schema_response.py  service.py
backend/app/events/: enum.py  enums.py  listeners.py  model.py  router.py  schema.py  schema_response.py  service.py
backend/app/explorations/: model.py  router.py  schema_request.py  schema_response.py  service.py
backend/app/general_settings/: model.py  router.py  schema.py  service.py
backend/app/graph/: edge.py  graph.py  node.py  router.py  service.py
backend/app/integration_providers/: aws_integration_provider.py  conveyor_integration_provider.py  databricks_integration_provider.py  integration_provider.py  snowflake_integration_provider.py  soda_integration_provider.py
backend/app/integrations/: model.py  router.py  schema.py  service.py
backend/app/mcp/: deps.py  loader.py  mcp.py  middleware.py  plugin_registry.py  router.py
backend/app/migrations/: rbac.py
backend/app/notification_interactions/: model.py  router.py  schema.py  schema_get.py  service.py
backend/app/notifications/: base_model.py  enums.py  model.py  notification_types.py  router.py  schema.py  schema_base.py  schema_get.py  schema_response.py  (+2 more)
backend/templates/: device_authorized.html  device_confirm.html
backend/tests/: __init__.py  conftest.py  seed_random_data.py  test_open_api_export.py  test_webhook_doc_export.py  webhook_util.py
demo/provisioner/: Dockerfile  README.md  ROUTES.md  pyproject.toml  requirements.txt
plugins/s3_plugin/: README.md  pyproject.toml  setup.py
sdk/: LICENSE.md  README.md  Taskfile.yml  pyproject.toml
sdk/data_product_portal_sdk/: README.md  __init__.py  auth.py  pyproject.toml
sdk/example/: README.md  provisioner.py
sdk/generation/: build_event_handler.py
sdk/scripts/: filter_openapi_v2.py
sdk/sdk/: __init__.py  auth.py  event_handler.py
(+3142 files in other folders)
