[project]
name = "app"
version = "0.0.1"
requires-python = ">=3.13,<3.14.0"
dependencies = [
  "python-dotenv>=1.2.1,<2.0.0",
  "fastapi==0.124.4",
  "gunicorn>=23.0.0,<24.0.0",
  "uvicorn>=0.38.0,<0.39.0",
  "pydantic[email]>=2.12.5,<3.0.0",
  "pydantic-settings>=2.12.0,<3.0.0",
  "typer>=0.20.0,<0.21.0",
  "requests>=2.32.5,<3.0.0",
  "httpx>=0.28.1,<0.29.0",
  "alembic>=1.17.2,<2.0.0",
  "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
  "sqlalchemy-utils>=0.42.0,<0.43.0",
  "sqlalchemy-easy-softdelete>=0.8.3,<0.9.0",
  "psycopg2-binary>=2.9.11,<3.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "shortuuid>=1.0.13,<2.0.0",
  "pytz>=2025.2,<2026.0",
  "boto3>=1.42.8,<2.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "asgi-correlation-id>=4.3.4,<5.0.0",
  "cryptography>=46.0.3,<47.0.0",
  "emailgen>=0.1.1,<0.2.0",
  "casbin>=1.43.0,<2.0.0",
  "casbin_sqlalchemy_adapter>=1.4.0,<2.0.0",
  "asyncpg>=0.31.0,<0.32.0",
  "cachetools>=6.2.2,<7.0.0",
  "greenlet>=3.3.0,<4.0.0",
  "h11>=0.16.0,<0.17.0",
  "fastmcp==2.14.0",
  "posthog>=7.0.1,<8.0.0",
  "authlib==1.6.6",
]
[tool.ruff.lint]
#https://docs.astral.sh/ruff/rules/
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "FAST001", "FAST003", #Currently Fast002 is disabled it leads to many changes
    "YTT", #flake-2020 rules, check for YTT bugs
    "ASYNC", #flake8 async rules
    "S", #flake-8 bandit, security rules
    "PT", #flake-8 pytest style
    "SIM", #flake-8 simplify rules
    "C4", #flake-8 comprehensions, help with writing better list/set/dict comprehensions.
    "EXE", #flake8-executable
    "FIX", #flake8-fixme
    "ISC", #flake8-implicit-str-concat
    "RSE", #flake8-raise
    "T20", #flake-8 print
    "TC", #flake8-type-checking
    "FURB",
    "PERF",
    "FLY",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
]
