[project]
name = "app"
version = "0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Stijn Janssens <stijn.janssens@dataminded.com>"]
readme = "README.md"

[tool.poetry.dependencies]
data-product-portal-sdk = { path = "../sdk" }
python = "^3.13"
python-dotenv = "^1.2.2"
fastapi = "0.136.3"
gunicorn = "^26.0.0"
uvicorn = "^0.49.0"
pydantic = { version = "^2.13.4", extras = ['email'] }
pydantic-settings = "^2.14.2"
typer = "^0.26.7"
requests = "^2.34.2"
httpx = "^0.28.1"
alembic = "^1.18.4"
sqlalchemy = { version = "^2.0.51", extras = ['asyncio'] }
sqlalchemy-utils = "^0.42.1"
sqlalchemy-easy-softdelete = "^0.9.1"
psycopg2-binary = "^2.9.12"
pyyaml = "^6.0.3"
pyjwt = "^2.13.0"
shortuuid = "^1.0.13"
pytz = "^2026.2"
boto3 = "^1.43.36"
jinja2 = "^3.1.6"
asgi-correlation-id = "^5.0.1"
cryptography = "^49.0.0"
emailgen = "^0.1.1"
casbin = "^1.43.0"
casbin_sqlalchemy_adapter = "^1.4.0"
asyncpg = "^0.31.0"
cachetools = "^7.1.4"
greenlet = "^3.5.2"
h11 = "^0.16.0"
fastmcp = "3.4.2"
posthog = "^7.20.5"
authlib = "1.7.2"
fastembed = "^0.8.0"
pgvector = "^0.4.2"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"
opentelemetry-distro = "^0.60b1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
pytest-dotenv= "^0.5.2"
factory-boy = "^3.3.3"
freezegun = "^1.5.5"
data-product-portal-sdk = { path = "../sdk", develop = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.46.0"
mypy = ">=1.20.2"
types-cachetools = "*"
types-requests = "*"
types-pytz = "*"
types-PyYAML = "*"

[tool.poe.tasks]
test = "pytest -v tests/"
lint = "ruff check --fix"
format = "ruff format"
ruff = ["lint", "format"]
ty = "uvx ty check"
coverage = "pytest --cov-report term-missing --cov-report html --cov=app tests/"
up = "docker compose -f test-compose.yaml up -d"
down = "docker compose -f test-compose.yaml down"
poetry-reqs = "uv pip compile requirements-poetry.in -o requirements-poetry.txt --generate-hashes --upgrade"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
#https://docs.astral.sh/ruff/rules/
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "FAST001", "FAST003", #Currently Fast002 is disabled it leads to many changes
    "YTT", #flake-2020 rules, check for YTT bugs
    "ASYNC", #flake8 async rules
    "S", #flake-8 bandit, security rules
    "PT", #flake-8 pytest style
    "SIM", #flake-8 simplify rules
    "C4", #flake-8 comprehensions, help with writing better list/set/dict comprehensions.
    "EXE", #flake8-executable
    "FIX", #flake8-fixme
    "ISC", #flake8-implicit-str-concat
    "RSE", #flake8-raise
    "T20", #flake-8 print
    "TC", #flake8-type-checking
    "FURB",
    "PERF",
    "FLY",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
