[project]
name = "dpp-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Pascal Knapen",email = "pascal.knapen@dataminded.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agno[os] (>=2.5.5,<3.0.0)",
    "anthropic (>=0.84.0,<0.85.0)",
    "mcp (>=1.26.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "dpp_agent", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
