[project]
name = "products"
version = "0.1.0"
description = ""
authors = [
    {name = "Pascal Knapen",email = "pascal.knapen@dataminded.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
